# 525-assign1

./: Makefile  README.md  storage_mgr.c  test_assign1_2.c
assign1/: CMakeLists.txt  Makefile
assign2/: CMakeLists.txt  Makefile  buffer_mgr.c  buffer_mgr_stat.c  intQueue.c  intQueue.h  replacementManager  replacementManager.c  storage_mgr.c  struct_mgr.h  test_assign2_1.c  test_intQueue
assign3/: CMakeLists.txt  Makefile  buffer_mgr.c  dberror.h  record_mgr.c  record_mgr.h  record_mgr.old.c.old  rm_serializer.c  storage_mgr.c  tables.h  test_assign2_1  test_assign3_1  test_assign3_1.c  test_assign3_2.c  test_table_t  user_interface.c
assign3 (copia)/: Makefile  a.out  record_mgr.c  rm_serializer.c  storage_mgr.c  temp  test_assign2_1.c  test_assign3_1  test_assign3_1.c  test_assign3_2  test_table_t  user_interface.c
assign4/: Makefile  btree_mgr.c  btree_mgr.h  expr.c  record_mgr.c  rm_serializer.c  test_assign4_1  test_assign4_1.c
